don't pass use_guidance

--- a/.pipelines/stages/jobs/steps/capi-win-step.yml
+++ b/.pipelines/stages/jobs/steps/capi-win-step.yml
@@ -78,19 +78,22 @@ steps:
   workingDirectory: '$(Build.Repository.LocalPath)'
 
 - powershell: |
-    cmake --preset windows_$(arch)_$(ep)_$(build_config) -DUSE_GUIDANCE=ON -T cuda='$(Build.Repository.LocalPath)\cuda_sdk\v$(cuda_version)'
+    # cmake --preset windows_$(arch)_$(ep)_$(build_config) -DUSE_GUIDANCE=ON -T cuda='$(Build.Repository.LocalPath)\cuda_sdk\v$(cuda_version)'
+    cmake --preset windows_$(arch)_$(ep)_$(build_config) -T cuda='$(Build.Repository.LocalPath)\cuda_sdk\v$(cuda_version)'
   displayName: 'Configure CMake C API with CUDA'
   condition: eq(variables['ep'], 'cuda')
   workingDirectory: '$(Build.Repository.LocalPath)'
 
 - powershell: |
-    cmake --preset windows_$(arch)_$(ep)_$(build_config) -DUSE_GUIDANCE=ON
+    # cmake --preset windows_$(arch)_$(ep)_$(build_config) -DUSE_GUIDANCE=ON
+    cmake --preset windows_$(arch)_$(ep)_$(build_config)
   displayName: 'Configure CMake C API without CUDA'
   condition: ne(variables['ep'], 'cuda')
   workingDirectory: '$(Build.Repository.LocalPath)'
 
 - powershell: |
-    cmake --build --preset windows_$(arch)_$(ep)_$(build_config) -DUSE_GUIDANCE=ON --parallel --target ${{ parameters.target }}
+    # cmake --build --preset windows_$(arch)_$(ep)_$(build_config) -DUSE_GUIDANCE=ON --parallel --target ${{ parameters.target }}
+    cmake --build --preset windows_$(arch)_$(ep)_$(build_config) --parallel --target ${{ parameters.target }}
   displayName: 'Build C API'
   workingDirectory: '$(Build.Repository.LocalPath)'
 
