--- a/.pipelines/android-publishing.yml
+++ b/.pipelines/android-publishing.yml
@@ -33,6 +33,9 @@ extends:
         enabled: true
         break: true # always break the build on policheck issues. You can disable it by setting to 'false'
         exclusionsFile: '$(Build.SourcesDirectory)\.pipelines\policheck_exclusions.xml'
+      tsa:
+        enabled: true
+        configFile: '$(Build.SourcesDirectory)\.config\tsaoptions.json'
     # Update the pool with your team's 1ES hosted pool.
     pool:
       name: 'onnxruntime-Win-CPU-2022'  # Name of your hosted pool
