--- a/.pipelines/nuget-publishing.yml
+++ b/.pipelines/nuget-publishing.yml
@@ -129,6 +129,9 @@ extends:
         enabled: true
         break: true # always break the build on policheck issues. You can disable it by setting to 'false'
         exclusionsFile: '$(Build.SourcesDirectory)\.pipelines\policheck_exclusions.xml'
+      tsa:
+        enabled: true
+        configFile: '$(Build.SourcesDirectory)\.config\tsaoptions.json'
     stages:
     - template: stages/capi-packaging-stage.yml
       parameters:
