--- a/.pipelines/stages/jobs/steps/capi-win-step.yml
+++ b/.pipelines/stages/jobs/steps/capi-win-step.yml
@@ -46,24 +46,35 @@ steps:
   condition: eq(variables['ep'], 'cuda')
   workingDirectory: '$(Build.Repository.LocalPath)'
 
-# Must we specity arch?
-- powershell: |
-    python build.py --parallel --config=$${{parameters.build_config}} --cuda_path='$(Build.Repository.LocalPath)\cuda_sdk\v$(cuda_version)' --build_dir='$(Build.Repository.LocalPath)\${buildDir}'
-  displayName: 'Build C API'
-  workingDirectory: '$(Build.Repository.LocalPath)'
-  condition: eq(variables['ep'], 'cuda')
+# Must we specify arch?
+# - powershell: |
+#     python build.py --parallel --package --config=$${{parameters.build_config}} --cuda_path='$(Build.Repository.LocalPath)\cuda_sdk\v$(cuda_version)' --build_dir='$(Build.Repository.LocalPath)\${buildDir}'
+#   displayName: 'Build C API'
+#   workingDirectory: '$(Build.Repository.LocalPath)'
+#   condition: eq(variables['ep'], 'cuda')
   # env:
   #   CUDA_PATH: '$(Build.Repository.LocalPath)\cuda_sdk\v$(cuda_version)'
 
+# - powershell: |
+#     python build.py --parallel --package --config=$${{parameters.build_config}} --build_dir='$(Build.Repository.LocalPath)\${buildDir}'
+#   displayName: 'Build C API'
+#   workingDirectory: '$(Build.Repository.LocalPath)'
+#   condition: ne(variables['ep'], 'cuda')
+
 - powershell: |
-    python build.py --parallel --config=$${{parameters.build_config}} 
+    $package_c = if (${{ parameters.target }} -eq 'onnxruntime-genai') { '--package' } else { '' }
+    if (${{ parameters.target }} -ne 'python') {
+      $build_wheel = 'skip_wheel'
+    } else {
+      $build_wheel = ''
+      python -m pip install wheel
+    }
+    $cuda_path = if (${{ parameters.ep }} -eq 'cuda') { '--cuda_path $(Build.Repository.LocalPath)\cuda_sdk\v$(cuda_version)' } else { '' }
+    $config = if (${{parameters.build_config}} -eq 'release') { '--config=Release' } else { '' }
+    python build.py --parallel --package --config=$${{parameters.build_config}} --build_dir='$(Build.Repository.LocalPath)\${buildDir}'
+    Rename-Item -Path '$(Build.Repository.LocalPath)\${buildDir}\Release' -NewName '$(os)-$(arch)' -Force
   displayName: 'Build C API'
   workingDirectory: '$(Build.Repository.LocalPath)'
-  condition: ne(variables['ep'], 'cuda')
-
-
-
-
 
 # - powershell: |
 #     cmake --preset windows_$(arch)_$(ep)_$(build_config) -T cuda='$(Build.Repository.LocalPath)\cuda_sdk\v$(cuda_version)'
@@ -82,11 +93,6 @@ steps:
 #   displayName: 'Build C API'
 #   workingDirectory: '$(Build.Repository.LocalPath)'
 
-
-
-
-
-
 - ${{ if eq(parameters.target, 'onnxruntime-genai') }}:
   - template: compliant/win-esrp-dll-step.yml
     parameters:
@@ -100,14 +106,14 @@ steps:
       AnalyzeTargetGlob: '$(Build.Repository.LocalPath)\**\*genai.dll'
     continueOnError: true
 
-  - powershell: |
-      python -m pip install wheel
-    displayName: 'Install wheel'
+  # - powershell: |
+  #     python -m pip install wheel
+  #   displayName: 'Install wheel'
 
-  - powershell: |
-      cmake --build --preset windows_$(arch)_$(ep)_$(build_config) --target package
-    displayName: 'Package C/C++ API'
-    workingDirectory: '$(Build.Repository.LocalPath)'
+  # - powershell: |
+  #     cmake --build --preset windows_$(arch)_$(ep)_$(build_config) --target package
+  #   displayName: 'Package C/C++ API'
+  #   workingDirectory: '$(Build.Repository.LocalPath)'
 
   - task: 1ES.PublishPipelineArtifact@1
     displayName: 'Publish Artifact: ONNXRuntime Genai capi'
@@ -129,13 +135,13 @@ steps:
       DoEsrp: true
       Pattern: '*.pyd'
 
-  - powershell: |
-      python -m pip install wheel
-    displayName: 'Install wheel'
+  # - powershell: |
+  #     python -m pip install wheel
+  #   displayName: 'Install wheel'
 
-  - powershell: |
-      cmake --build --preset windows_$(arch)_$(ep)_$(build_config) --parallel --PyPackageBuild
-    displayName: 'Build Python Wheel'
+  # - powershell: |
+  #     cmake --build --preset windows_$(arch)_$(ep)_$(build_config) --parallel --PyPackageBuild
+  #   displayName: 'Build Python Wheel'
 
   - powershell: |
       Get-ChildItem -Path $(Build.Repository.LocalPath) -Recurse
