modify macos preset

--- a/cmake/presets/CMakeMacOSConfigPresets.json
+++ b/cmake/presets/CMakeMacOSConfigPresets.json
@@ -11,8 +11,7 @@
       "cacheVariables": {
         "CMAKE_POSITION_INDEPENDENT_CODE": "ON",
         "USE_CUDA": "OFF",
-        "USE_ROCM": "OFF",
-        "USE_GUIDANCE": "ON"
+        "USE_ROCM": "OFF"
       },
       "environment": {
         "CC": "clang",
