update libssl installation

--- a/.github/workflows/linux-cpu-arm64-build.yml
+++ b/.github/workflows/linux-cpu-arm64-build.yml
@@ -38,6 +38,7 @@ jobs:
           rustup override set 1.86.0
           rustup component add rust-src
           rustup show active-toolchain
+          apt-get update && apt-get install libssl-dev -y
 
       - name: Get the Latest OnnxRuntime Nightly Version
         shell: pwsh
@@ -84,7 +85,7 @@ jobs:
         run: |
           docker run --rm \
           --volume $GITHUB_WORKSPACE:/onnxruntime_src \
-          -w /onnxruntime_src ort_genai_linux_arm64_gha bash -c "python3 --version && apt update && apt install libssl-dev -y && /usr/bin/cmake --preset linux_gcc_cpu_release"
+          -w /onnxruntime_src ort_genai_linux_arm64_gha bash -c "python3 --version && /usr/bin/cmake --preset linux_gcc_cpu_release"
 
       - name: Docker -- Build with CMake and GCC
         run: |
