--- a/.github/workflows/linux-cpu-arm64-build.yml
+++ b/.github/workflows/linux-cpu-arm64-build.yml
@@ -86,7 +86,7 @@ jobs:
         run: |
           docker run --rm \
           --volume $GITHUB_WORKSPACE:/onnxruntime_src \
-          -w /onnxruntime_src ort_genai_linux_arm64_gha bash -c "python3 --version && sudo apt update && sudo apt install pkg-config libssl-dev -y && export OPENSSL_INCLUDE_DIR=/usr/include && /usr/bin/cmake --preset linux_gcc_cpu_release"
+          -w /onnxruntime_src ort_genai_linux_arm64_gha bash -c "python3 --version && export OPENSSL_INCLUDE_DIR=/usr/include && /usr/bin/cmake --preset linux_gcc_cpu_release"
 
       - name: Docker -- Build with CMake and GCC
         run: |
