--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -76,6 +76,20 @@ jobs:
         with:
           submodules: true
 
+      - name: Install Rust with rustup
+        run: |
+          curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+          echo "$HOME/.cargo/bin" >> $GITHUB_PATH
+          source "$HOME/.cargo/env"
+          rustup install 1.86.0
+          rustup override set 1.86.0
+          rustup component add rust-src
+          rustup show active-toolchain
+
+      - name: Install Rust Android Toolchain
+        run: |
+          rustup target add --toolchain 1.86.0-x86_64-unknown-linux-gnu x86_64-linux-android
+
       - name: Create Android build
         run: |
           set -e -x
