--- a/.pipelines/stages/jobs/steps/capi-linux-step.yml
+++ b/.pipelines/stages/jobs/steps/capi-linux-step.yml
@@ -119,11 +119,10 @@ steps:
     --rm \
     --volume $(Build.Repository.LocalPath):/ort_genai_src \
     -w /ort_genai_src/ ortgenai$(ep)build$(arch) \
-    python:3.11 bash -c " \
+    bash -c " \
         python -m pip install requests && \
         python -m pip install wheel && \
-        python build.py --parallel $use_cuda $package_c $skip_wheel && \
-          --config=$build_config --build_dir='$(Build.Repository.LocalPath)/${buildDir}'"
+        python build.py --parallel $use_cuda $package_c $skip_wheel && --config=$build_config --build_dir='$(Build.Repository.LocalPath)/${buildDir}'"
     ls $(Build.Repository.LocalPath)/build
     echo "BuildDir: $(Build.Repository.LocalPath)/${buildDir}"
     mv -f "$(Build.Repository.LocalPath)/${buildDir}/Release" "${os}-${arch}"
