--- a/.pipelines/stages/jobs/steps/capi-linux-step.yml
+++ b/.pipelines/stages/jobs/steps/capi-linux-step.yml
@@ -115,14 +115,25 @@ steps:
       build_config="Debug"
     fi
 
+    if [ -n "$PyNoDotVer" ]; then
+      py_dot_ver="$(PyDotVer)"
+      py_no_dot_ver="$(PyNoDotVer)"
+    else
+      py_dot_ver="3.11"
+      py_no_dot_ver="311"
+    fi
+
+    echo "py_dot_ver: $py_dot_ver"
+    echo "py_no_dot_ver: $py_no_dot_ver"
+
     docker run \
     --rm \
     --volume $(Build.Repository.LocalPath):/ort_genai_src \
     -w /ort_genai_src/ ortgenai$(ep)build$(arch) \
     bash -c " \
-        python -m pip install requests && \
-        python -m pip install wheel && \
-        python build.py --parallel $use_cuda $package_c $skip_wheel && --config=$build_config --build_dir='$(Build.Repository.LocalPath)/${buildDir}'"
+        /opt/python/cp$(py_no_dot_ver)-cp$(py_no_dot_ver)/bin/python$(py_dot_ver) -m pip install requests && \
+        /opt/python/cp$(py_no_dot_ver)-cp$(py_no_dot_ver)/bin/python$(py_dot_ver) -m pip install wheel && \
+        /opt/python/cp$(py_no_dot_ver)-cp$(py_no_dot_ver)/bin/python$(py_dot_ver) build.py --parallel $use_cuda $package_c $skip_wheel && --config=$build_config --build_dir='$(Build.Repository.LocalPath)/${buildDir}'"
     ls $(Build.Repository.LocalPath)/build
     echo "BuildDir: $(Build.Repository.LocalPath)/${buildDir}"
     mv -f "$(Build.Repository.LocalPath)/${buildDir}/Release" "${os}-${arch}"
