expression should've been resolved

--- a/.pipelines/stages/jobs/steps/capi-linux-step.yml
+++ b/.pipelines/stages/jobs/steps/capi-linux-step.yml
@@ -131,9 +131,9 @@ steps:
     --volume $(Build.Repository.LocalPath):/ort_genai_src \
     -w /ort_genai_src/ ortgenai$(ep)build$(arch) \
     bash -c " \
-        /opt/python/cp$(py_no_dot_ver)-cp$(py_no_dot_ver)/bin/python$(py_dot_ver) -m pip install requests && \
-        /opt/python/cp$(py_no_dot_ver)-cp$(py_no_dot_ver)/bin/python$(py_dot_ver) -m pip install wheel && \
-        /opt/python/cp$(py_no_dot_ver)-cp$(py_no_dot_ver)/bin/python$(py_dot_ver) build.py --parallel $use_cuda $package_c $skip_wheel && --config=$build_config --build_dir='$(Build.Repository.LocalPath)/${buildDir}'"
+        /opt/python/cp${py_no_dot_ver}-cp${py_no_dot_ver}/bin/python${py_dot_ver} -m pip install requests && \
+        /opt/python/cp${py_no_dot_ver}-cp${py_no_dot_ver}/bin/python${py_dot_ver} -m pip install wheel && \
+        /opt/python/cp${py_no_dot_ver}-cp${py_no_dot_ver}/bin/python${py_dot_ver} build.py --parallel $use_cuda $package_c $skip_wheel && --config=$build_config --build_dir='$(Build.Repository.LocalPath)/${buildDir}'"
     ls $(Build.Repository.LocalPath)/build
     echo "BuildDir: $(Build.Repository.LocalPath)/${buildDir}"
     mv -f "$(Build.Repository.LocalPath)/${buildDir}/Release" "${os}-${arch}"
