--- a/.pipelines/stages/jobs/steps/capi-linux-step.yml
+++ b/.pipelines/stages/jobs/steps/capi-linux-step.yml
@@ -133,10 +133,9 @@ steps:
     bash -c " \
         /opt/python/cp${py_no_dot_ver}-cp${py_no_dot_ver}/bin/python${py_dot_ver} -m pip install requests && \
         /opt/python/cp${py_no_dot_ver}-cp${py_no_dot_ver}/bin/python${py_dot_ver} -m pip install wheel && \
-        /opt/python/cp${py_no_dot_ver}-cp${py_no_dot_ver}/bin/python${py_dot_ver} build.py --parallel $use_cuda $package_c $skip_wheel && --config=$build_config --build_dir='$(Build.Repository.LocalPath)/${buildDir}'"
-    ls $(Build.Repository.LocalPath)/build
-    echo "BuildDir: $(Build.Repository.LocalPath)/${buildDir}"
-    mv -f "$(Build.Repository.LocalPath)/${buildDir}/Release" "${os}-${arch}"
+        /opt/python/cp${py_no_dot_ver}-cp${py_no_dot_ver}/bin/python${py_dot_ver} build.py --parallel $use_cuda $package_c $skip_wheel && --config=$build_config --build_dir='$(Build.Repository.LocalPath)/build/${ep}'"
+    ls $(Build.Repository.LocalPath)/build -R
+    # mv -f "$(Build.Repository.LocalPath)/${buildDir}/Release" "${os}-${arch}"
   displayName: 'Build GenAi'
   workingDirectory: '$(Build.Repository.LocalPath)'
 
