Add support for Machine Translation model

--- a/examples/c/CMakeLists.txt
+++ b/examples/c/CMakeLists.txt
@@ -10,6 +10,7 @@ option(PHI3_QA "Build the Phi Q&A example without multi-turn prompting" OFF)
 option(PHI3V "Build the Phi-3 vision example" OFF)
 option(PHI4-MM "Build the Phi-4 mm example" OFF)
 option(WHISPER "Build the Whisper example" OFF)
+option(MARIAN "Build the Marian example" OFF)
 
 if(USE_CXX)
   add_compile_definitions(USE_CXX)
@@ -83,4 +84,9 @@ endif()
 if(WHISPER)
   add_executable(whisper ${CMAKE_SOURCE_DIR}/src/whisper.cpp ${EXAMPLES_SOURCE_DIR}/common.cpp)
   prepare_executable(whisper)
+endif()
+
+if(MARIAN)
+  add_executable(marian ${EXAMPLES_SOURCE_DIR}/marian.cpp  ${EXAMPLES_SOURCE_DIR}/common.cpp)
+  prepare_executable(marian)
 endif()
